cluster/apps/default/plex-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: plex
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.150
    ports:
      - port: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    nginx.ingress.kubernetes.io/app-root: /web
spec:
  ingressClassName: nginx
  rules:
    - host: plex.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex
                port:
                  number: 80
  tls:
    - hosts:
        - plex.${SECRET_DOMAIN}
      secretName: plex-tls
